--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
         <header class="showcase">
             <div class="showcase-top">
                 <img src="https://i.ibb.co/r5krrdz/logo.png" alt="" />
-                <a href="#" class="btn btn-rounded">Sign In</a>
+                <!-- Add the login form -->
+                <form id="loginForm">
+                    <label for="username">Username:</label>
+                    <input type="text" id="username" name="username" required>
+
+                    <label for="password">Password:</label>
+                    <input type="password" id="password" name="password" required>
+
+                    <button type="submit">Sign In</button>
+                </form>
             </div>
             <div class="showcase-content">
                 <h1>See what's next</h1>
@@ -56,7 +65,7 @@
                 <!-- Your footer content goes here -->
             </div>
         </footer>
-
+        <script src="https://cdn.auth0.com/js/auth0/9.11/auth0.min.js"></script>
         <script src="script.js"></script>
     </body>
 
