Editing and making some modyfications

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <body>
         <!-- Popup Container (if you're still using it) -->
         <div id="popup-container">
-            <div id="popup">
-                <p>This website is under construction. Feel free to explore what's available!</p>
+            <div style="background-color: blue;" id="popup">
+                <p style="color: aliceblue;">This website is still under construction. <br>Shem is still working hard to make things better, but feel free to explore what's available...!</p>
                 <button onclick="closePopup()">Continue</button>
             </div>
         </div>
@@ -37,18 +37,18 @@
                 </div>
             </div>
             <div class="showcase-content">
-                <h1>See what's next</h1>
-                <p>Watch anywhere. Cancel Anytime</p>
+                <h1 style="background-color: transparent;color: rgb(61, 61, 134);"> Hello welcom...! See what's next</h1>
+                <p style="color: rgb(49, 49, 142);"><em>Watch anywhere. Cancel Anytime</em></p>
                 <a href="#" class="btn btn-xl">Watch Free For 30 Days <i class="fas fa-chevron-right btn-icon"></i></a>
             </div>
         </header>
 
-        <section class="tabs">
-            <div class="container">
+    <!--   <section class="tabs">
+             <div class="container">
                 <div id="tab-1" class="tab-item tab-border">
-                    <i class="fas fa-door-open fa-3x"></i>
-                    <p class="hide-sm">Cancel at any time</p>
-                </div>
+                 <i class="fas fa-door-open fa-3x"></i>
+                  <p class="hide-sm">Cancel at any time</p>
+                </div> -->
                 <!-- The rest of your tab items -->
             </div>
         </section>
@@ -62,8 +62,8 @@
         <!-- New section for videos -->
         <section class="videos" id="videosSection">
             <div class="container" id="videosContainer">
-                <h2>You are most welcome to my site feel free to scoll down to watch interesting videos of your choice
-                </h2>
+                <h3 style="color:goldenrod;"><em>You are most welcome to my site feel free to scoll down to watch interesting videos of your
+                choice</em></h3>
                 <!-- Search Bar -->
                 <div id="search-container">
                     <input type="text" id="searchInput" placeholder="Search videos...">
@@ -92,7 +92,7 @@
                     inbox just got a whole lot more interesting.</p>
         
                 <p>Need assistance? Our dedicated support team is ready to help. Reach out to us anytime at <a
-                        href="mailto:support@example.com">support@example.com</a> or visit our Help Center for FAQs.</p>
+                        href="mailto:shemsupport.com">shemsupport.com</a> or visit our Help Center for FAQs.</p>
         
                 <p>Committed to excellence, driven by innovation. Learn more about our values and mission. Your trust is our
                     motivation.</p>
