Modiftying my code

--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
                 </div>
                 <!-- Videos will be dynamically added here -->
             </div>
+            <div>
+                <a href="https\\score808ball.com"></a>
+            </div>
         </section>
 
         <!-- Footer Section -->
