Edditing my code

--- a/index.html
+++ b/index.html
@@ -64,17 +64,19 @@
             <div class="container" id="videosContainer">
                 <h3 style="color:goldenrod;"><em>You are most welcome to my site feel free to scoll down to watch interesting videos of your
                 choice</em></h3>
+                <div>
+                    <a href="https://score808ball.com/">sport live</a>
+                </div>
                 <!-- Search Bar -->
                 <div id="search-container">
                     <input type="text" id="searchInput" placeholder="Search videos...">
                     <button onclick="searchVideos()">Search</button>
-                </div>
+                </div>                          
                 <!-- Videos will be dynamically added here -->
             </div>
-            <div>
-                <a href="https\\score808ball.com"></a>
-            </div>
+
         </section>
+        
 
         <!-- Footer Section -->
         <footer class="footer">
