--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
           
             crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <title>shem's_movie_site</title>
+        <title>shem's~movie~site</title>
     </head>
 
     <body>
@@ -19,21 +19,26 @@
                 <button onclick="closePopup()">Continue</button>
             </div>
         </div>
+        <!-- Main Content Area -->
+        <section class="main-content">
         <header class="showcase">
             <div class="showcase-top">
                 <div class="containers">
                     <h1>
-                        <span>W</span>
+                        <span>B</span>
                         <span>e</span>
-                        <span>l</span>
-                        <span>c</span>
+                        <span>s</span>
+                        <span>t</span>
+                        <span>&nbsp;</span>
+                        <span>M</span>
                         <span>o</span>
-                        <span>m</span>
+                        <span>v</span>
+                        <span>i</span>
                         <span>e</span>
                         <span>&nbsp;</span>
-                        <span>H</span>
-                        <span>o</span>
-                        <span>m</span>
+                        <span>S</span>
+                        <span>i</span>
+                        <span>t</span>
                         <span>e</span>
                     </h1>
                 </div>
@@ -53,12 +58,17 @@
             </div>
 
                 </div>
-            </div>
-            <div class="showcase-content">
-                <h1 style="background-color: transparent;color: rgb(165, 165, 212);"> <span>Hello welcom...! See what's next</span></h1>
-                <h3><span><em>Watch anywhere. Cancel Anytime</em></span></h3>
-               <button style="display: flex;text-align: center;
-               text-decoration: none;text-shadow: 2px;border-radius: 10px;border: 1px black;background-color:peru;"><a href="#" class="btn btn-xl">Watch Free For 30 Days <i class="fas fa-chevron-right btn-icon"></i></a></button>
+            <section>
+                <div class="showcase-content">
+                    <h1 style="background-color: transparent;color: rgb(165, 165, 212);"> <span>Hello welcom...! See what's next</span>
+                    </h1>
+                    <h3><span><em>Watch anywhere. Cancel Anytime</em></span></h3>
+                    <button style="display: flex;text-align: center;
+                               text-decoration: none;text-shadow: 2px;border-radius: 10px;border: 1px black;background-color:peru;"><a
+                            href="#" class="btn btn-xl">Watch Free For 30 Days <i
+                                class="fas fa-chevron-right btn-icon"></i></a></button>
+                </div>
+            </section>
             </div>
         </header>
 
@@ -72,13 +82,14 @@
             </div>
         </section>
 
-        <section class="tab-content">
+       <!--<section class="tab-content">
             <div class="container">
-                <!-- The rest of your tab content items -->
+                <!-- The rest of your tab content items 
             </div>
-        </section>
+        </section>-->
 
         <!-- New section for videos -->
+        <section>
         <div style="background-color: blue;" class="video">
             <section class="videos" id="videosSection">
                 <div class="container" id="videosContainer">
@@ -88,15 +99,16 @@
                             interesting
                             videos of your
                             choice</em></h3>
-                    <div>
+                    <button class="button1"><div>
                         <a style="color: black;" href="https://score808tv.com/" target="_blank">Watch Sports live</a>
-                    </div>
+                    </div></button>
                     <!-- Search Bar -->
                     <div id="search-container">
                         <input type="text" id="searchInput" placeholder="Search videos...">
                         <button onclick="searchVideos()">Search</button>
                     </div>
                 </div>
+            </section>
             </section>
         </div>
 
