--- a/index.html
+++ b/index.html
@@ -4,164 +4,70 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Your Movie Website</title>
-        <style>
-            body {
-                font-family: 'Arial', sans-serif;
-                margin: 0;
-                padding: 0;
-                background-color: gold;
-            }
-
-            header {
-                background-color: #333;
-                color: #fff;
-                text-align: center;
-                padding: 20px;
-            }
-
-            section {
-                max-width: 1200px;
-                margin: 20px auto;
-                padding: 20px;
-                background-color: #fff;
-                border-radius: 8px;
-                box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            }
-
-            h1 {
-                color: green;
-            }
-
-            p {
-                color: green;
-            }
-
-            .featured-movies {
-                display: flex;
-                flex-wrap: wrap;
-                justify-content: space-around;
-                background-image: url(flowery_image.jpg);
-            }
-
-            .movie-card {
-                width: 30%;
-                margin: 10px;
-                border-radius: 8px;
-                overflow: hidden;
-                box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-                background: transparent;
-                background-color: aqua;
-            }
-
-            .movie-card img {
-                width: 100%;
-                height: auto;
-            }
-
-            .iframe-container {
-                position: relative;
-                padding-bottom: 56.25%;
-                /* 16:9 aspect ratio */
-                height: 0;
-                overflow: hidden;
-            }
-
-            .iframe-container iframe {
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-            }
-
-            .top_section {
-                background-color: aquamarine;
-            }
-
-            #second_section {
-                background-color: blue;
-            }
-
-            video {
-                height: 50vh;
-                width: 100%;
-                padding: 0%;
-                margin: 0%;
-                margin-left: 5px;
-                margin-right: 5px;
-                margin-top: 3px;
-            }
-            @media only screen and (max-width: 600px) {
-    h1 {
-        font-size: 1.5em;
-    }
-
-    p {
-        font-size: 0.8em;
-    }
-
-    .movie-card {
-        width: 100%; /* Make movie cards take full width on smaller screens */
-    }
-}
-</style>
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+          
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <title>shem's~movie~site</title>
     </head>
 
     <body>
-        <header class="top_section">
-            <h1>Your Movie Website</h1>
-            <p>Discover the latest and greatest in cinema!</p>
-        </header>
-
-        <section id="second_section">
-            <h2>Featured Movies</h2>
-
-            <div class="featured-movies">
-                <div class="movie-card">
-                    <div class="iframe-container">
-                        <!-- Replace 'VIDEO_ID' with the actual YouTube video ID -->
-                        <iframe src="https://www.youtube.com/embed/Opkoy_zI0Ig" frameborder="0" allowfullscreen></iframe>
-                    </div>
-                    <h3>Mark Ruffalo Hulk Action Movie</h3>
-                    <p>Ruffalo took over the role beginning with 2012's The Avengers and continued his tenure through 2022's She-Hulk.</p>
-                </div>
-
-                <div class="movie-card">
-                    <img src="images/feature-3.png" alt="Movie 2">
-                    <h3>Movie Title 2</h3>
-                    <p>Description of Movie 2.</p>
-                </div>
-
-                <div class="movie-card">
-                    <img src="images1/feature-4.png" alt="Movie 3">
-                    <h3>Movie Title 3</h3>
-                    <p>Description of Movie 3.</p>
-                </div>
+        <!-- Popup Container (if you're still using it) -->
+        <div id="popup-container">
+            <div style="background-color: blue;" id="popup">
+                <p style="color: aliceblue;">This website is still under construction. <br>Shem is still working hard to make things better, but feel free to explore what's available...!</p>
+                <button onclick="closePopup()">Continue</button>
             </div>
-            <div class="featured-movies">
-                <div class="movie-card">
-                    <div class="iframe-container">
-                        <!-- Replace 'VIDEO_ID' with the actual YouTube video ID -->
-                        <iframe src="https://www.youtube.com/embed/VIDEO_ID" frameborder="0" allowfullscreen></iframe>
-                    </div>
-                    <h3>Movie Title 1</h3>
-                    <p>Description of Movie 1.</p>
+        </div>
+        <!-- Main Content Area -->
+        <section class="main-content">
+        <header class="showcase">
+            <div class="showcase-top">
+                <div class="containers">
+                    <h1>
+                        <span>B</span>
+                        <span>e</span>
+                        <span>s</span>
+                        <span>t</span>
+                        <span>&nbsp;</span>
+                        <span>M</span>
+                        <span>o</span>
+                        <span>v</span>
+                        <span>i</span>
+                        <span>e</span>
+                        <span>&nbsp;</span>
+                        <span>S</span>
+                        <span>i</span>
+                        <span>t</span>
+                        <span>e</span>
+                    </h1>
                 </div>
-
-                <div class="movie-card">
-                    <img src="images/feature-3.png" alt="Movie 2">
-                    <h3>Movie Title 2</h3>
-                    <p>Description of Movie 2.</p>
-                </div>
-
-                <div class="movie-card">
-                    <img src="images1/feature-4.png" alt="Movie 3">
-                    <h3>Movie Title 3</h3>
-                    <p>Description of Movie 3.</p>
-                </div>
+                <!-- Login Button -->
+            <button id="loginButton">Login</button>
+            <button id="logoutButton">Logout</button>     
+            <!-- Login Form (Initially Hidden) -->
+            <div id="loginForm" style="display:none;">
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username" required>    
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" required>    
+                <button id="submitButton">Submit</button>
             </div>
-        </section>
+                </div>
+            <section>
+                <div class="showcase-content">
+                    <h1 style="background-color: transparent;color: rgb(165, 165, 212);"> <span>Hello welcom...! See what's next</span>
+                    </h1>
+                    <h3><span><em>Watch anywhere. Cancel Anytime</em></span></h3>
+                    <button style="display: flex;text-align: center;
+                               text-decoration: none;text-shadow: 2px;border-radius: 10px;border: 1px black;background-color:peru;"><a
+                            href="index.html" class="btn btn-xl">Watch Free For 30 Days <i
+                                class="fas fa-chevron-right btn-icon"></i></a></button>
+                </div>
+            </section>
+            </div>
+       </header>    
+        <script src="https://cdn.auth0.com/js/auth0/9.11/auth0.min.js"></script>
+        <script src="script.js"></script>
     </body>
-
 </html>
