Renaming my files apprpriately

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <h3><span><em>Watch anywhere. Cancel Anytime</em></span></h3>
                     <button style="display: flex;text-align: center;
                                text-decoration: none;text-shadow: 2px;border-radius: 10px;border: 1px black;background-color:peru;"><a
-                            href="index.html" class="btn btn-xl">Watch Free For 30 Days <i
+                            href="index1.html" class="btn btn-xl">Watch Free For 30 Days <i
                                 class="fas fa-chevron-right btn-icon"></i></a></button>
                 </div>
             </section>
