--- a/index1.html
+++ b/index1.html
@@ -105,17 +105,52 @@
         width: 100%; /* Make movie cards take full width on smaller screens */
     }
 }
+.welcom-container {
+   position: relative;
+   width: 100%;
+   height: 150vh;
+   overflow: hidden;
+   max-height: 55vh;
+}
+.welcom {
+   object-fit: cover;
+   width: 100%;
+   height: 100%;
+   position: absolute;
+   top: 0;
+   left: 0;
+   z-index: -1;
+   max-height: 55vh;
+}
+.welcome-text {
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   text-align: center;
+   font-size: 2rem;
+   color: green;
+   background-color: rgba(0, 0, 0, 0.5);
+   padding: 10px;
+}
 </style>
     </head>
-
     <body>
-        <header class="top_section">
+        <div class="welcom-container">
+            <video class="welcom" autoplay loop muted>
+                <source src="videos/wecloingvid.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video></div>
+            <header>
+            <div class="welcome-text">Welcome Message
             <h1>Your Movie Website</h1>
             <p>Discover the latest and greatest in cinema!</p>
             <button class="button1">
                 <div>
                     <a style="color: black;" href="https://score808tv.com/" target="_blank">Watch Sports live</a>
                 </div>
+            </div>
+        </div>
             </button>
         </header>
 
