updating my header content and linking tags

--- a/index1.html
+++ b/index1.html
@@ -104,6 +104,9 @@
     .movie-card {
         width: 100%; /* Make movie cards take full width on smaller screens */
     }
+    .welcome{
+        width: 100%;
+    }
 }
 .welcom-container {
    position: relative;
