--- a/index1.html
+++ b/index1.html
@@ -140,7 +140,7 @@
     </head>
     <body>
         <div class="welcom-container">
-            <video class="welcom" autoplay loop muted>
+            <video class="welcom" autoplay loop muted playsinline>
                 <source src="videos/wecloingvid.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video></div>
