updating and making my button tags more atractive

--- a/index1.html
+++ b/index1.html
@@ -143,14 +143,14 @@
             <video class="welcom" autoplay loop muted playsinline>
                 <source src="videos/wecloingvid.mp4" type="video/mp4">
                 Your browser does not support the video tag.
-            </video></div>
+            </video>
             <header>
             <div class="welcome-text">Welcome Message
             <h1>Your Movie Website</h1>
             <p>Discover the latest and greatest in cinema!</p>
             <button class="button1">
                 <div>
-                    <a style="color: black;" href="https://score808tv.com/" target="_blank">Watch Sports live</a>
+                    <a style="color: black; background-color: blue;" href="https://score808tv.com/" target="_blank">Watch Sports live</a>
                 </div>
             </div>
         </div>
