--- a/index1.html
+++ b/index1.html
@@ -136,6 +136,21 @@
    background-color: rgba(0, 0, 0, 0.5);
    padding: 10px;
 }
+.button1{
+    background-color:blue; /* Green */
+    border: 1px salmon;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2;
+    cursor: pointer;
+    border-radius: 20px;
+    padding-bottom: 0%;
+
+}
 </style>
     </head>
     <body>
@@ -150,7 +165,7 @@
             <p>Discover the latest and greatest in cinema!</p>
             <button class="button1">
                 <div>
-                    <a style="color: black; background-color: blue;" href="https://score808tv.com/" target="_blank">Watch Sports live</a>
+                    <a style="color: black;" href="https://score808tv.com/" target="_blank">Watch Sports live</a>
                 </div>
             </div>
         </div>
