Adding more movies & movies containers

--- a/index.html
+++ b/index.html
@@ -14,8 +14,13 @@
     <body>
         <!-- Popup Container (if you're still using it) -->
         <div id="popup-container">
-            <div style="background-color: blue;" id="popup">
-                <p style="color: aliceblue;">This website is still under construction. <br>Shem is still working hard to make things better, but feel free to explore what's available...!</p>
+            <div style="background-color: lightseagreen;" id="popup">
+                <h4>NOTE...!</h4>
+                <p style="color: aliceblue;">This website is still under construction. 
+                    <br>Shem is still working hard to make things better, but feel free to explore what's available...! <br>
+                please.....! please.......! just have patience more movies will be added <br>
+                 accompanied with there titles and descriptions  
+                </p>
                 <button onclick="closePopup()">Continue</button>
             </div>
         </div>
