--- a/index1.html
+++ b/index1.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
-        <title>Your Movie Website</title>
+        <title>shem's~movie~site</title>
         <style>
             body {
                 font-family: 'Arial', sans-serif;
@@ -96,6 +96,9 @@
     h1 {
         font-size: 1.5em;
     }
+    h3 {
+        font-size: 1.5em;
+    }
 
     p {
         font-size: 0.8em;
@@ -106,6 +109,7 @@
     }
     .welcome{
         width: 100%;
+        object-fit: cover;
     }
 }
 .welcom-container {
