making my website more responsive and unjusting the screen sizes for phone view

--- a/index1.html
+++ b/index1.html
@@ -11,7 +11,7 @@
                 font-family: 'Arial', sans-serif;
                 margin: 0;
                 padding: 0;
-                background-color: gold;
+                background-color: rgb(204, 176, 17);
             }
 
             header {
@@ -30,11 +30,11 @@
             }
 
             h1 {
-                color: green;
+                color: rgb(9, 133, 9);
             }
 
             .welcome-text p {
-                color: green;
+                color: rgb(10, 125, 10);
             }
 
             .featured-movies {
@@ -51,7 +51,7 @@
                 overflow: hidden;
                 box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
                 background: transparent;
-                background-color: aqua;
+                background-color: rgb(27, 212, 212);
             }
 
             .movie-card img {
@@ -76,11 +76,11 @@
             }
 
             .top_section {
-                background-color: aquamarine;
+                background-color: rgb(25, 220, 155);
             }
 
             #second_section {
-                background-color: blue;
+                background-color: rgb(25, 25, 209);
             }
 
             video {
@@ -140,7 +140,7 @@
    width: 100%;
    text-align: center;
    font-size: 2rem;
-   color: green;
+   color: rgb(8, 137, 8);
    background-color: rgba(0, 0, 0, 0.5);
    padding: 10px;
 }
@@ -150,7 +150,7 @@
    position:absolute;
    font-size: 1rem;
    color: lightblue;
-   background-color: rgba(0, 0, 0, 0.5);
+   background-color: rgba(20, 19, 19, 0.5);
    padding: 10px;
    align-items: self-start;
 
@@ -162,7 +162,7 @@
     color: lightgreen;
 }
 .button1{
-    background-color:blue; /* Green */
+    background-color:rgb(21, 21, 218); /* Green */
     border: 1px salmon;
     color: white;
     margin-top: 2px;
@@ -174,7 +174,7 @@
     color: #fff;
 }
 .welcome-text i{
-    color: yellowgreen;
+    color: rgb(135, 185, 34);
     background: transparent;
 }
 </style>
@@ -383,7 +383,7 @@
         <i class="bi bi-facebook">&nbsp;<a href="@shem shemko">@shem shemko</a></i><br>
         <i class="bi bi-twitter">&nbsp;<a href="@shemomondi7">@shemomondi7</a></i><br>
         <i class="bi bi-instagram">&nbsp;<a href="@omondishem85">@omondishem85</a></i><br>
-        <p>Copyright 2021 - Movie website</p>
+        <p>Copyright 2023 - Movie website</p>
 
     </footer>
 
