Making my website be more responsive

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </div>
             <section>
                 <div class="showcase-content">
-                    <h1 style="background-color: transparent;color: rgb(165, 165, 212);"> <span>Hello welcom...! See what's next</span>
+                    <h1 style="background-color: transparent;color: rgb(165, 165, 212);"> <span>Hello welcome...! See what's next</span>
                     </h1>
                     <h3><span><em>Watch anywhere. Cancel Anytime</em></span></h3>
                     <button style="display: flex;text-align: center;
