Adding collaboration platforms at the footer content

--- a/index1.html
+++ b/index1.html
@@ -378,11 +378,11 @@
     </body>
     <footer class="footer_content">
         For collaboration/queations feel free to contact/find me on the following platforms below: <br>
-        <i class="bi bi-telephone">&nbsp;<a href="+254112675636">+254112675636</a></i><br>
-        <i class="bi bi-github">&nbsp;<a href="shemomondi@github.com">shemomondi@github.com</a></i><br>
-        <i class="bi bi-facebook">&nbsp;<a href="@shem shemko">@shem shemko</a></i><br>
-        <i class="bi bi-twitter">&nbsp;<a href="@shemomondi7">@shemomondi7</a></i><br>
-        <i class="bi bi-instagram">&nbsp;<a href="@omondishem85">@omondishem85</a></i><br>
+        <i class="bi bi-telephone">&nbsp;<a href="+254112675636" target="_blank">+254112675636</a></i><br>
+        <i class="bi bi-github">&nbsp;<a href="https:\\github.com" target="_blank">shemomondi@github.com</a></i><br>
+        <i class="bi bi-facebook">&nbsp;<a href="https:\\facebook.com" target="_blank">@shem shemko</a></i><br>
+        <i class="bi bi-twitter">&nbsp;<a href="https:\\twitter.com" target="_blank">@shemomondi7</a></i><br>
+        <i class="bi bi-instagram">&nbsp;<a href="https:\\instagram.com" target="_blank">@omondishem85</a></i><br>
         <p>Copyright 2023 - Movie website</p>
 
     </footer>
